_helm_charts/xebia/helm-xebia-opa-gatekeeper@v0.4.3/samples/K8sCapsOnHPA.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sCapsOnHPA
metadata:
  name: hpa-must-have-caps
  labels:
    severity: high
    projectId: xlr8s-demo
    envId: dev
spec:
  enforcementAction: dryrun

  match:
    namespaces:
      - default

    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system

    kinds:
      - apiGroups: ["autoscaling"]
        kinds: ["HorizontalPodAutoscaler"]

    labelSelector:
      matchLabels:
        app: nginx

  parameters:
    maxReplicas: 10
    minReplicas: 3
