_helm_charts/xebia/helm-xebia-opa-gatekeeper@v0.4.3/samples/K8sDisallowHostPath.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostPath
metadata:
  name: hostpath-volumns-not-allowed
  labels:
    severity: high
    projectId: xlr8s-demo
    envId: dev
spec:
  enforcementAction: dryrun

  match:
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system

    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
      - apiGroups: [""]
        kinds: ["Pod"]

    labelSelector:
      matchLabels:
        app: nginx
