_helm_charts/xebia/helm-xebia-opa-gatekeeper@v0.4.3/samples/K8sDisallowPrivilegedPods.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowPrivilegedPods
metadata:
  name: container-must-not-run-as-privileged
  labels:
    severity: high
    projectId: xlr8s-demo
    envId: dev
spec:
  enforcementAction: dryrun

  match:
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system

    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
      - apiGroups: [""]
        kinds: ["Pod"]

    labelSelector:
      matchLabels:
        app: nginx
